--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -3,6 +3,37 @@
 <%= form_for @song  do |f| %>
   <%= f.label :title %>
   <%= f.text_field :title %>
+  
+  <br />
+  <br />
+  
+  <%= f.label :artist_name %>
+  <%= f.text_field :artist_name %>
+  
+  <br />
+  <br />
+  
+  <%= f.collection_select :genre_id, Genre.all, :id, :name %>
+  <!-- This generated this HTML: <select name="song[genre_id]" id="song_genre_id"> -->
+  <!-- And as for :id and :name, Underneath the html above, we get <option value="1"(:id)>Blues(:name)</option> -->
+  
+  <br />
+  <br />
+
+  <%= f.fields_for :notes do |n| %>
+    <%= n.label :content %>
+    <%= n.text_field :content %>
+  <% end %>
+
+  <br />
+  <br />
+
+  <%= f.fields_for :notes do |n| %>
+    <%= n.label :content %>
+    <%= n.text_field :content %>
+  <% end %>
+
+  <br />
   <br />
 
   <%= f.submit %>
